response cards in agregate view for professor is now fixed. no more overflow. it is capped at 3 columns then 2 then 1 depends on screen sizes.  professor dashboard welcome title also align to content container.

--- a/Capstone-master/Capstone/wwwroot/css/dashboard-professor.css
+++ b/Capstone-master/Capstone/wwwroot/css/dashboard-professor.css
@@ -27,7 +27,7 @@ html, body {
 }
 
 .sidenav {
-    width: 300px;
+    width: 400px;
     background-color: #D9D9D9;
     z-index: 10;
     padding: 15px;
@@ -94,7 +94,6 @@ html, body {
 
 .content-container {
     width: 100vw;
-    position: fixed;
 }
 
     .content-container h1 {
