--- a/Capstone-master/Capstone/wwwroot/css/pages-professor.css
+++ b/Capstone-master/Capstone/wwwroot/css/pages-professor.css
@@ -382,11 +382,10 @@ h1 {
     gap: .2rem;
     background: linear-gradient(135deg, #D9D9D9 0%, #B0B0B0 100%);
     border-radius: 10px;
-    width: 100%;
     padding: .5rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border: 1px solid #A0A0A0;
-    gap: 120px;
+    justify-content: space-between;
 }
 
     .filters input,
@@ -417,13 +416,13 @@ h1 {
     display: flex;
     gap: 1.5rem;
     flex-direction: column;
-    width: 100%;
+    width: 70%;
 }
 
 
 .response-cards {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
 }
 
@@ -634,6 +633,47 @@ h1 {
 /* Feel free to add to this but ultimately this is the layout*/
 
 
+
+
+
+/*tablet? View */
+@media (max-width: 1300px) {
+
+
+    /*Student Management Page*/
+
+    .user-row {
+        text-align: center;
+    }
+
+
+
+    /*Aggregate View Page*/
+
+    .response-cards {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+
+
+
+    /*Scrums Management Page*/
+
+
+
+
+    /*Team Management Page*/
+
+
+
+
+}
+
+
+
+
+
+
 /*Iphone View */
 @media (max-width: 580px) {
 
@@ -684,7 +724,7 @@ h1 {
     }
 
     .response-cards {
-        grid-template-columns: 1fr;
+        grid-template-columns: repeat(1, 1fr);
     }
 
     .response-card {
@@ -728,7 +768,7 @@ h1 {
     /*Team Management Page*/
 
     .teamsList {
-        width: 30rem;
+        width: 25rem;
         align-self: center;
     }
 
@@ -760,32 +800,4 @@ h1 {
 
 
 
-/*tablet? View */
-@media (max-width: 1300px) {
 
-
-    /*Student Management Page*/
-
-    .user-row {
-        text-align: center;
-    }
-
-
-
-    /*Aggregate View Page*/
-
-
-
-
-
-    /*Scrums Management Page*/
-
-
-
-
-    /*Team Management Page*/
-
-
-
-
-}
